# Balatro_Clone

./: .gitignore  CMakeLists.txt  README.md
assets/Buttons/: PlayHandAnim.ase
assets/Cards/: Ace_Heart.aseprite
src/: Button.cpp  Button.h  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Score.cpp  Score.h
